<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView4"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:text="" />

    <EditText
        android:id="@+id/InfoDataCompany"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/uiDepartment"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:theme="@android:style/Theme.Holo.InputMethod" />

    <EditText
        android:id="@+id/InfoDataName"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.01"
        android:hint="@string/Name"
        android:inputType="textFilter"
        android:maxLines="1"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:singleLine="true"
        android:theme="@android:style/Theme.Holo.InputMethod" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/DepartmentText" />

    <Spinner
        android:id="@+id/infoDepartments_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:background="@android:color/transparent"
        android:paddingLeft="5dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:text="@string/CountText" />

    <Spinner
        android:id="@+id/infoPackage_count__"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:paddingLeft="5dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <Button
            android:id="@+id/delete"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="left"
            android:text="@string/delete" />

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="right"
            android:text="@string/update" />
    </RelativeLayout>

</LinearLayout>