<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/scan_entry_company"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="5dp"
        android:hint="@string/uiDepartment"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        android:theme="@android:style/Theme.Holo.InputMethod" />

    <EditText
        android:id="@+id/scan_entry_name"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/Name"
        android:maxLines="1"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        android:theme="@android:style/Theme.Holo.InputMethod"
        android:layout_below="@+id/scan_entry_company"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:id="@+id/scan_entry_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scan_entry_name"
        android:layout_marginTop="5dp"
        android:text="@string/checkbox" />

    <CheckBox
        android:id="@+id/scan_entry_checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scan_entry_checkBox"
        android:layout_marginTop="5dp"
        android:text="@string/outgoing" />
</RelativeLayout>