<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:text="@string/logout"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:theme="@android:style/Theme.DeviceDefault.Dialog"/>

    <Button
        android:id="@+id/senders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Senders"
        android:theme="@android:style/Theme.DeviceDefault.Dialog"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:elevation="0dp"
        android:ellipsize="none"
        android:text="@string/cancel"
        android:theme="@android:style/Theme.DeviceDefault.Dialog" />

</RelativeLayout>