<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/previous"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previous" />

    <TextView
        android:id="@+id/previous_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/previous"
        android:paddingLeft="15dp"
        android:text="" />

    <EditText
        android:id="@+id/info_company"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/uiDepartment"
        android:imeOptions="flagNoFullscreen"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:theme="@android:style/Theme.Holo.InputMethod"
        android:layout_below="@+id/previous_data"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/delete_sender"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/delete"
        android:layout_below="@+id/info_company"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/update_sender"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/info_company"
        android:layout_gravity="right"
        android:text="@string/update" />

</RelativeLayout>
