<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:id="@+id/manual_entry_tracking"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:hint="@string/hint_manual"
        android:imeOptions="flagNoFullscreen"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        android:theme="@android:style/Theme.Holo.InputMethod" />

    <EditText
        android:id="@+id/manual_entry_company"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="-5dp"
        android:hint="@string/uiDepartment"
        android:imeOptions="flagNoFullscreen"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        android:theme="@android:style/Theme.Holo.InputMethod" />

    <Spinner
        android:id="@+id/manual_entry_spinner_data"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:paddingLeft="5dp"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <EditText
        android:id="@+id/manual_entry_name"
        style="@android:style/TextAppearance.Small"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/Name"
        android:imeOptions="flagNoFullscreen"
        android:maxLines="1"
        android:paddingLeft="5dp"
        android:singleLine="true"
        android:textColorHint="@android:color/black"
        android:theme="@android:style/Theme.Holo.InputMethod" />

</LinearLayout>